Scraping service version 0.2.0
query parameters works, most of the functionality works
