# pkg/models/json_data_types.go
@@ -1,14 +1,14 @@
 package models
 
 type JSONErrorInfo struct {
-	Code    int    `json:"code,ompitempty"`
-	Message string `json:"message,ompitempty"`
+    Code    int    `json:"code,ompitempty" example:"404"`
+    Message string `json:"message,ompitempty" example:"not found"`
 }
 
 type JSONError struct {
-	Error JSONErrorInfo `json:"error"`
+    Error JSONErrorInfo `json:"error"`
 }
 
 type JSONData struct {
-	Data interface{} `json:"data"`
+    Data interface{} `json:"data"`
 }
